crates/vize_atelier_sfc/src/script/define_props_destructure/snapshots/vize_atelier_sfc__script__define_props_destructure__tests__snapshots__member_expression_chain.snap
---
source: crates/vize_atelier_sfc/src/script/define_props_destructure.rs
expression: result
---
const name = __props.user.profile.name
const email = __props.user?.contact?.email
const id = __props.user['id']
