crates/vize_atelier_sfc/src/script/define_props_destructure/snapshots/vize_atelier_sfc__script__define_props_destructure__tests__snapshots__multiple_variable_declarations.snap
---
source: crates/vize_atelier_sfc/src/script/define_props_destructure.rs
expression: result
---
const bar = 'fish', hello = 'world'
console.log(__props.foo)
