crates/vize_atelier_sfc/src/script/define_props_destructure/snapshots/vize_atelier_sfc__script__define_props_destructure__tests__snapshots__nested_scope.snap
---
source: crates/vize_atelier_sfc/src/script/define_props_destructure.rs
expression: result
---
function test(foo) {
    console.log(foo)
    console.log(__props.bar)
}
